# PyDCCLab

./: .gitignore  ClassHierarchy.graffle  README-developers.md  README.md  correlationMatrixStats.py  env.py  mtpDatabase.py  pdkDatabase.py  pyproject.toml  scratch.py  setup.py  test2.py
Database/: DB_management.py  README.md  database.py  databaseUtilities.py  metadata.py  pom.py  uTest.py
Database/CsvFromMetadata/: csvFromCziMetadata.py
Database/CziMetadataManagement/: channel.py  (+2 more)
ImageAnalysis/: DCC-Images.py  DCCImages.py  DCCImagesExceptions.py  README.md  cziUtil.py  imageProcessing.py
cervolib/: channel.py  cziUtil.py  image.py
dcclab/: DCCExceptions.py  __init__.py  __lifReader.py  channel.py  channelFloat.py  channelInteger.py  correlationMatrix.py  csvMetadata.py  cziFile.py  cziMetadata.py  cziUtil.py  database.py  databaseUtilities.py  dataset.py  image.py  imageCollection.py  imageFile.py  imageMetadata.py  labpca.py  lifFile.py  lifReader.py  loader.py  movieFile.py  mtpDatabase.py  pathPattern.py  query.csv  scratch.py  tiff2AVI.py  timeSeries.py  zStack.py
examples/: importDRS-001Dataset.py
imageAnalysis/: DCC-Images.py  README.md  cziUtil.py
image_analysis/: czi_util.py  czi_util_test.py
obsolete/: DB_management.py  csvFromCziMetadata.py
temp-env/: pip-selfcheck.json  pyvenv.cfg
testData/: Data_plateforme - souris.csv  MissingKeys.xml  test.db
unitTesting/: cziChannelTest.py  cziFilterTest.py  cziMetadataTest.py  cziNameAnalysisTest.py  cziNameTest.py  databaseTest.py  scratch.py  test_channel.py  test_filter.py  test_metadata.py
(+250 files in other folders)
