[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dcclab"
dynamic = ["version"]
description = "A Python library to read, transform, manipulate image and manage databases"
readme = "README.md"
license = "MIT"
requires-python = ">=3"
authors = [
    { name = "Daniel Côté", email = "dccote@cervo.ulaval.ca" },
    { name = "Gabriel Genest" },
    { name = "Mathieu Fournier" },
    { name = "Ludovick Bégin" },
]
keywords = ["image", "analysis", "stack", "movies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Education",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
dependencies = [
    "keyring",
    "mysql-connector-python",
    "matplotlib",
    "numpy",
    "scikit-image",
    "scipy",
    "czifile>=2019.6.18",
    "tifffile",
    "read-lif",
    "tables",
    "xlwt",
    "xlrd",
    "Pillow",
    "pandas",
    "scikit-learn",
    "opencv-python",
]

[project.urls]
Homepage = "https://github.com/DCC-Lab/PyDCCLab"

[tool.setuptools_scm]
version_file = "dcclab/_version.py"

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
"*" = ["*.png"]
"doc" = ["*.html"]
